--- a/01-docker-terraform/2_docker_sql/pg-test-connection.ipynb
+++ b/01-docker-terraform/2_docker_sql/pg-test-connection.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a1096f72",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f569baa5",
    "metadata": {},
    "outputs": [],
@@ -42,17 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "523f5cf5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.base.Connection at 0x23600a83580>"
+       "<sqlalchemy.engine.base.Connection at 0x7d535830d7f0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "9f5a61a1",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "0       1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "e1c509ea",
    "metadata": {},
    "outputs": [
@@ -156,30 +156,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>public</td>\n",
-       "      <td>yellow_tripdata_trip</td>\n",
-       "      <td>root</td>\n",
-       "      <td>None</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  schemaname             tablename tableowner tablespace  hasindexes  \\\n",
-       "0     public  yellow_tripdata_trip       root       None       False   \n",
-       "\n",
-       "   hasrules  hastriggers  rowsecurity  \n",
-       "0     False        False        False  "
+       "Empty DataFrame\n",
+       "Columns: [schemaname, tablename, tableowner, tablespace, hasindexes, hasrules, hastriggers, rowsecurity]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,17 +184,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "a1d1f971",
+   "execution_count": 8,
+   "id": "a01034ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/new_project/01-docker-terraform/2_docker_sql\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv('yellow_tripdata_2021-01.csv', nrows=100)"
+    "!pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
+   "id": "9c6f218c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2024-08-07 00:48:50--  https://github.com/DataTalksClub/nyc-tlc-data/releases/download/yellow/yellow_tripdata_2021-01.csv.gz\n",
+      "Resolving github.com (github.com)... 140.82.121.3\n",
+      "Connecting to github.com (github.com)|140.82.121.3|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/513814948/f6895842-79e6-4a43-9458-e5b0b454a340?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20240806%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240806T224850Z&X-Amz-Expires=300&X-Amz-Signature=53ba980cc6ade23a9e11c2129b382c0667733077c7648b50022d96a8ca6bfa84&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=513814948&response-content-disposition=attachment%3B%20filename%3Dyellow_tripdata_2021-01.csv.gz&response-content-type=application%2Foctet-stream [following]\n",
+      "--2024-08-07 00:48:50--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/513814948/f6895842-79e6-4a43-9458-e5b0b454a340?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20240806%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240806T224850Z&X-Amz-Expires=300&X-Amz-Signature=53ba980cc6ade23a9e11c2129b382c0667733077c7648b50022d96a8ca6bfa84&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=513814948&response-content-disposition=attachment%3B%20filename%3Dyellow_tripdata_2021-01.csv.gz&response-content-type=application%2Foctet-stream\n",
+      "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
+      "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 25031880 (24M) [application/octet-stream]\n",
+      "Saving to: ‘yellow_tripdata_2021-01.csv.gz’\n",
+      "\n",
+      "yellow_tripdata_202 100%[===================>]  23.87M  84.3MB/s    in 0.3s    \n",
+      "\n",
+      "2024-08-07 00:48:51 (84.3 MB/s) - ‘yellow_tripdata_2021-01.csv.gz’ saved [25031880/25031880]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://github.com/DataTalksClub/nyc-tlc-data/releases/download/yellow/yellow_tripdata_2021-01.csv.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a1d1f971",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('yellow_tripdata_2021-01.csv.gz', nrows=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "f9e76d7f",
    "metadata": {},
    "outputs": [],
@@ -218,10 +256,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "f711ab67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.to_sql(name='yellow_tripdata_trip', con=engine, index=False)"
    ]
@@ -236,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "9549987c",
    "metadata": {},
    "outputs": [
@@ -546,7 +595,7 @@
        "9                    0.3         18.95                   2.5  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
